--- a/ci/tasks/get-file.yml
+++ b/ci/tasks/get-file.yml
@@ -5,7 +5,7 @@ image_resource:
     source: { repository: node, tag: slim}
 
 inputs:
- - name: create-some-files
+ #- name: create-some-files
  - name: get-some-files
 
 run: 
