modified  yml file

--- a/ci/pipeline/pipeline.yml
+++ b/ci/pipeline/pipeline.yml
@@ -20,15 +20,15 @@ jobs:
             source: { repository: busybox }
 
         inputs:
-        - name: create-some-files
-          path: create-some-files
+        - name: pass-output
+          path: pass-output
 
         outputs:
         - name: get-some-files
 
         run:
          path: sh
-         args: [create-some-files/ci/tasks/create-file.sh]
+         args: [pass-output/ci/tasks/create-file.sh]
      
     - task: get-files
       file: pass-output/ci/tasks/get-file.yml
